# memo

./: .gitignore  Dockerfile  bench_inference.py  compute_ll.py  compute_sscd_gt.py  compute_t2i_metrics.py  compute_vendi_score.py  download_vendi_ckpt.py  eps_trajectory.py  generate_memo_prompts.py  image_utils.py  jepa_scoring.py  jepa_timing.py  latent_diffusion.py  latent_flux.py  latent_sdxl.py  merge_benchmark.py  merge_metrics.py  optimize_xT.py  planning.txt  plot_cross_seed_variance.py  plot_memo_proxy.py  prepare_coco_real.py  pyproject.toml  requirements.txt  run_ini_opti.py
cas/: utils_extended.py  utils_ll.py  utils_original.py
diag/: _cmp_adj_auto.py  diag_adj_coeff.py  diag_adj_dynamics.py  diag_adjoint_norm_sweep.py  diag_adjoint_toy.py  diag_adjoint_vs_direct.py  diag_cache_consistency.py  diag_cache_sweep.py  diag_cache_truth.py  diag_compare_two.py  diag_controlled.py  diag_correct_sweep.py  diag_decisive.py  diag_dxT_lr.py  diag_finite_diff_real.py  diag_finite_diff_toy.py  diag_gold_backprop.py  diag_grad_sign.py  diag_skeptic_verify.py  diag_terminal_signal.py  diag_tidx_sweep.py  diag_verdict.py  diag_verdict_test1.py
prdc/: Dataset.py  Models.py  __init__.py  prdc.py  prdc_cli.py  utils.py
results_eps_trajectory/: eps_traj_00.npz  eps_traj_01.npz  eps_traj_02.npz  eps_traj_03.npz
shells/: plot_memo_proxy.sh  prepare_coco_real.sh  run_diversity.sh  run_eps_trajectory.sh  run_generate_memo_prompts.sh  run_memo.sh  run_memo_score.sh  run_optimize_xT.sh
utils_local/: attn_utils.py  fetch_ckpts.py  fetch_sdxl.py  img_util.py  ptp_utils.py
(+3 files in other folders)
